  - New features
     - New vpRobotPioneer class to control Pioneer mobile robots using
       Aria 3rd party library.
     - New vpFeatureSegment class to consider a segment as a visual
       servoing feature.
     - Introduction of new functionalities in vpIoTools to parse text
       config files
     - Introduction of YARP to ViSP image converters in vpImageConvert
  - Improvements
     - Compatibility with OpenCV 2.4.0
     - Remove warning detected with Visual C++ /Wall flag
     - Use CMake native package finder for zlib, png, jpeg, coin3d, gtk2 and
       doxygen 3rd party libraries detection. If detection fails, we use our
       own package finder.
     - Under Windows, changes done to add "d" suffix to the library name when
       build in debug (libvisp-2d.lib and libvisp-2d.dll). Install stage
       copy libvisp-2[d].lib in $CMAKE_INSTALL_PREFIX/lib and libvisp-2[d].dll
       in $CMAKE_INSTALL_PREFIX/bin.
     - Use OpenMP to optimize the execution of the moments computation
  - Examples:
    - New example plot3d.cpp to show how to plot 3D curves
  - Bug fixed
     - [13536] Division by zero in vpMeLine
     - [13548] ViSP-2.6.1 produces several warnings with g++ 4.4.3, a const
	       is missing in vpMbtDistanceLine.h
     - [13575] ViSP sporadic segmentation fault in vpMeLine
     - [13625] trackMeNurbs example produce an assertion failed with MSVC:
               "list iterator not incrementable"
     - [13626] testXmlParser produre a Debug assertion failed with MSVC
     - [13678] Cannot build all the examples if no display capability is
	       available
     - [13679] GDI not detected on Windows 7 (64 bit) with Visual C++ Express
	       2010
     - [13689] Memory leaks in jpeg reader: vpImageIo::readJPEG()
     - [13690] Memory leaks in NURBS tracker
     - [13843] In vpPolygon, isInside() may produce a segfault and getArea()
               or getCenter() give bad results